2014-06-26  Teresa Johnson  <tejohnson@google.com>

	* doc/invoke.texi: Fix typo.
	* dumpfile.c: Add support for documented -fdump-* options
	optimized/missed/note/optall.

2014-06-26  Martin Jambor  <mjambor@suse.cz>

	* params.def (PARAM_ALLOW_LOAD_DATA_RACES)
	(PARAM_ALLOW_PACKED_LOAD_DATA_RACES)
	(PARAM_ALLOW_PACKED_STORE_DATA_RACES): Removed.
	(PARAM_ALLOW_STORE_DATA_RACES): Set default to zero.
	* opts.c (default_options_optimization): Set
	PARAM_ALLOW_STORE_DATA_RACES to one at -Ofast.
	* doc/invoke.texi (allow-load-data-races)
	(allow-packed-load-data-races, allow-packed-store-data-races):
	Removed.
	(allow-store-data-races): Document the new default.

2014-06-26  Martin Jambor  <mjambor@suse.cz>

	* ipa-prop.c (ipa_impossible_devirt_target): No longer static,
	renamed to ipa_impossible_devirt_target.  Fix typo.
	* ipa-prop.h (ipa_impossible_devirt_target): Declare.
	* ipa-cp.c (ipa_get_indirect_edge_target_1): Use
	ipa_impossible_devirt_target.

2014-06-26  Richard Biener  <rguenther@suse.de>

	PR tree-optimization/61607
	* tree-ssa-copy.c (copy_prop_visit_phi_node): Adjust comment
	explaining why we restrict copies on loop depth.
	* tree-ssa-dom.c (cprop_operand): Remove restriction on
	on loop depth.
	(record_equivalences_from_phis): Instead add it here.

2014-06-26  Bernd Schmidt  <bernds@codesourcery.com>

        * Makefile.in (COLLECT2_OBJS): Add collect-utils.o.
        (LTO_WRAPPER_OBJS): New variable.
        (lto-wrapper$(exeext)): Use it.
        * collect2.c: Include "collect-utils.h".
        (verbose, debug): Remove variables.
        (at_file_supplied): No longer static.
        (tool_name): New variable.
        (do_wait, fork_execute, maybe_unlink): Don't declare.
        (tool_cleanup): No longer static.
        (notice): Remove function.
        (maybe_run_lto_and_relink, main, do_dsymutil): Add new arg to
        fork_execute calls.
        (collect_wait, do_wait, collect_execute): Remove functions.