@@ -1,5 +1,16 @@
 2014-06-26  Teresa Johnson  <tejohnson@google.com>
 
+	* c-family/c-common.h (get_dump_info): Declare.
+	* c-family/c-gimplify.c (c_genericize): Use saved dump files.
+	* c-family/c-opts.c (c_common_parse_file): Begin and end dumps
+	once around parsing invocation.
+	(get_dump_info): New function.
+	* cp/class.c (dump_class_hierarchy): Use saved dump files.
+	(dump_vtable): Ditto.
+	(dump_vtt): Ditto.
+
+2014-06-26  Teresa Johnson  <tejohnson@google.com>
+
 	* doc/invoke.texi: Fix typo.
 	* dumpfile.c: Add support for documented -fdump-* options
 	optimized/missed/note/optall.
